# Gerador-QrCode

./: .gitignore  README.md  main.py  pyproject.toml
src/core/: qr_generator.py
src/data/: countries.py
src/ui/: app.py
src/utils/: helpers.py  validators.py
tests/: test_qr_generator.py
